iniciando o contasreceber | pagamentos das consultas

--- a/WebContent/cadastro/findAtendente.xhtml
+++ b/WebContent/cadastro/findAtendente.xhtml
@@ -102,10 +102,10 @@
 											target="#{atendenteBean.atendenteModel}" />
 									</p:commandButton>
 								</div>
-								<div class="ui-g-12 ui-lg-1">
+								<div class="ui-g-12 ui-lg-2">
 									<p:commandButton id="botaoInativar" value="Desativar"
-										style="height:40px; background: rose !important  ;
-										   background-color: lightskyblue ;
+										style="height:40px;background: tomato !important  ;
+										   background-color: tomato ;
 										   color:white !important;
 										   font-size:large;"
 										immediate="true" action="#{atendenteBean.inativar}"
@@ -124,7 +124,7 @@
 									</p:selectOneRadio>
 								</div>
 							</h:panelGroup>
-							<div class="ui-g-12 ui-lg-3">
+							<div class="ui-g-12 ui-lg-2">
 								<p:inputText value="#{atendenteBean.campoBuscaNome}"
 									placeholder="Buscar pelo Nome" id="inputNome"
 									style="height:40px; ">
