--- a/WebContent/financeiro/receber/buscaContasReceber.xhtml
+++ b/WebContent/financeiro/receber/buscaContasReceber.xhtml
@@ -43,6 +43,7 @@
 					<div class="ui-g">
 						<br />
 						<p:dataTable value="#{contasReceberBean.lstContasReceber}" var="d"
+							emptyMessage="Não Há Registros" 
 							styleClass="table.gridtable" rowKey="#{d.idContasReceber}"
 							selectionMode="single" id="table" paginator="true" rows="8"
 							selection="#{contasReceberBean.contasReceberModel}">
@@ -80,12 +81,12 @@
 								 value="R$ #{d.valorConsulta}" />
 							
 							</p:column> 
-							<p:column headerText="Parcelas" priority="1"
+							<p:column headerText="Parcelas" priority="1" style="width: 10%"
 							rendered="#{contasReceberBean.contasReceberModel.status eq 'L' or
 										contasReceberBean.contasReceberModel.status eq 'PA' and
 							contasReceberBean.contasReceberModel.idContasReceber > 0}" >
-								<p:commandLink  
-								value="Parcelas" update=" , :formulario:tableParcelas"
+								<p:commandButton icon=" ui-icon-transferthick-e-w"
+								value="Parcelas" update=" :formulario:tableParcelas"
 								actionListener="#{contasReceberBean.buscaParcelas}"
 								onclick="PF('mostraParcelas').show()" />
 							</p:column> 	
